[package]
name = "wasmspa"
version = "0.1.0"
authors = ["LuisLz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.4"
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"
serde_derive = "1.0.118"
serde = "1.0.118"
strum_macros = "0.20.1"
strum = "0.20.0"
serde_json = "1.0.61"
reqwest = "0.10.10"
yewtil = "0.3.2"
futures = "0.3.8"
async-std = "1.8.0"
js-sys = "0.3.46"

[dependencies.web-sys]
version = "0.3.46"
features = [
  "HtmlCollection",
  "CssStyleDeclaration"
]